@@ -9,7 +9,3 @@ python-apport:
 
 add firefox apport hook to suppress crash reports when restart is
 necessary, and to not file crashes with flash installed
-
-UI:
- - new field 'UnsupportableReason: <text>' and display <text> instead
-   of filing the bug
