@@ -37,6 +37,12 @@ apport (0.70) UNRELEASED; urgency=low
     availability. (LP: #94678)
   * apport-chroot: Add forgotten sys.exit(1) after printing the error message
     about an invalid chroot specification.
+  * apport/ui.py, run_crash(): Check for a field "UnsupportableReason: <text>"
+    and display an information box that the current configuration cannot be
+    supported because of <text>, instead of processing and reporting the
+    crash. Add test case for this workflow. With special regards to our
+    Firefox crash triagers who want to get rid of the hundreds of
+    flash-related crashes. :)
 
   [ Kees Cook ]
   * apport/report.py, add_proc_info(): If reading /proc/pid/maps fails,
@@ -63,7 +69,7 @@ apport (0.70) UNRELEASED; urgency=low
   * apport/ui.py, open_url(): Check that $DISPLAY is set before considering
     the KDE/Gnome web browsers.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 21:24:27 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 23 Mar 2007 08:56:15 +0100
 
 apport (0.69) feisty; urgency=low
 
